# local-model-pro

./: .dockerignore  .gitignore  :memory:  Dockerfile  README.md  codex_reasoning_switch_plan.md  codex_reasoning_switch_repo_review_addendum.md  docker-compose.yml  pyproject.toml
src/local_model_pro/: __init__.py  admin_profile_store.py  cli.py  config.py  conversation_store.py  devflow.py  ingestion_intents.py  knowledge_assist.py  local_tools.py  ollama_client.py  qdrant_memory.py  server.py  url_review.py  web_search.py
src/local_model_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/local_model_pro/static/: app.css  app.js  index.html
tests/: test_conversation_store.py  test_devflow.py  test_direct_save.py  test_grounded_mode.py  test_ingestion_intents.py  test_knowledge_recursion.py  test_memory_lookup.py  test_ollama_client.py  test_server_chat.py  test_server_knowledge_pipeline.py  test_url_review.py
